alignment done, need to fix padding for debit card info form

--- a/src/pages/Donation.css
+++ b/src/pages/Donation.css
@@ -1,17 +1,3 @@
-/* .donationAmount {
-    display: block;
-    font-size: 3vh;
-    line-height: 1.5;
-    color: hsla(0,0%,100%,.55);
-    background-color: var(--dark-grey);
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    height: 8vh;
-    /* background-color: red;
-} */
-
 .paymentSection2{
     display: flex;
     /* float: right; */
@@ -28,16 +14,19 @@
     /* margin: 20px; */
     width: 30%;
     height: 200px;
-    background-color: blue;
+    /* background-color: blue; */
     position: absolute;
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: calc(-3vh - 9vw);
 }
 
 .donationSection{
     text-align: center;
     align-items: center;
     display: flex;
+    margin-top: 2vh;
+    margin-bottom: 20vh;
 }
 .formSection2{
     text-align: center;
@@ -52,8 +41,8 @@
     align-self: center;
 }
 
-.amount{
-    font-size: 40px;
+.amount {
+    font-size: calc(10vh + 10vw);
 }
 
 .donationValue {
@@ -64,7 +53,7 @@
     width: calc(10vh + 10vw);
     height: clamp(5vh, 15vh, 30vh);
     font-size: clamp(0.5vh, 5vh, 8vh);
-    background: linear-gradient(#1e1e1e, #282828) padding-box,
+    background: linear-gradient(#141414, #1c1c1c) padding-box,
                 linear-gradient(to right, var(--primary), #5dbcff) border-box;
     border-radius: 3vh;
     border: 4px solid transparent;
@@ -87,8 +76,15 @@
 
 }
 
-.payment {
-    /* background-color: green; */
+.donationValue:focus {
+    outline: none;
+    border: 4px solid var(--primary);
+    cursor: pointer;
+    transform: scale(1.05);
+    color: var(--primary);
+    background: linear-gradient(#141414, #1c1c1c) padding-box,
+                linear-gradient(to right, var(--primary), #5dbcff) border-box;
+    
 }
 
 @media screen and (max-width: 991px) {
@@ -105,7 +101,7 @@
     .paypalDiv{
         width: 50%;
         height: 200px;
-        background-color: blue;
+        /* background-color: blue; */
         position: absolute;
         margin-left: 25%;
         margin-right: 25%;
